--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,38 @@
 <h2 class="content-block">Welome to Pokemom</h2>
 <div class="content-block">
   <div class="dx-card responsive-paddings">
-    <form class="example" action="/action_page.php" style="margin:auto;max-width:300px">
-      <input type="text" placeholder="Search by Name" name="search2">
-      <button type="submit"><i class="fa fa-search"></i></button>
+    <div class="dx-card responsive-paddings">
+    <!-- <form class="example"  style="margin:auto;max-width:300px" (submit)="search()">
+      <dx-form [formData]="formData" [disabled]="loading">
+        <dxi-item dataField="name" editorType="dxTextBox"
+          [editorOptions]="{ stylingMode: 'filled', placeholder: 'pokemom name' }">
+          <dxi-validation-rule type="required" message="pokemom name is required"></dxi-validation-rule>
+          <dxo-label [visible]="false"></dxo-label>
+        </dxi-item>
+        <dxi-item itemType="button">
+          <dxo-button-options width="100%" type="default" [useSubmitBehavior]="true" [template]="'searchTemplate'">
+          </dxo-button-options>
+        </dxi-item>
+
+
+        <ng-container *dxTemplate="let item of 'searchTemplate'">
+          <span class="dx-button-text">
+            <ng-container *ngIf="loading; else notLoading">
+              <dx-load-indicator width="24px" height="24px" [visible]="true"></dx-load-indicator>
+            </ng-container>
+            <ng-template #notLoading>Search</ng-template>
+          </span>
+        </ng-container>
+
+      </dx-form>
+
+    </form> -->
+    <form class="example"  style="margin:auto;max-width:300px">
+      <input type="text" placeholder="Search.." name="search2"[(ngModel)]="pokeName">
+      <button type="submit" (click)="search()"><i class="fa fa-search"></i></button>
     </form>
+
+    </div>
     <div class="images">
       <div *ngFor="let pokemom of listRepsonseResult?.results">
         <div (click)="showDetail(pokemom)" class="item-content">
